--- a/.env.production
+++ b/.env.production
@@ -3,7 +3,7 @@ NEXT_PUBLIC_CHAIN_ID = "137"
 NEXT_PUBLIC_GTAG = "G-FT8LMCGY1R"
 
 # 10+ nodes balanced, US/EU
-NEXT_PUBLIC_NODE_1 = "https://bsc-dataseed1.ninicoin.io"
+NEXT_PUBLIC_NODE_1 = "https://polygon-rpc.com"
 
 # 10+ nodes balanced, US/EU
 NEXT_PUBLIC_NODE_2 = "https://bsc-dataseed1.defibit.io"
