--- a/.github/workflows/updateLPsAPR.yml
+++ b/.github/workflows/updateLPsAPR.yml
@@ -34,8 +34,8 @@ jobs:
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v3
         with:
-          author: PancakeSwap Bot <pancakeswap-bot@protonmail.com>
-          token: ${{ secrets.LP_APR_PANCAKE_BOT }}
+          author: RabbitCoin Bot <rabbitcoinpolygon@gmail.com>
+          token: ${{ secrets.LP_APR_RABIT_BOT }}
           delete-branch: true
           commit-message: 'chore: Update LP APRs for Farms'
           title: 'chore: Update LP APRs for Farms'
