--- a/.env.development
+++ b/.env.development
@@ -6,10 +6,10 @@ NEXT_PUBLIC_GTAG = "G-FT8LMCGY1R"
 NEXT_PUBLIC_NODE_1 = "https://polygon-rpc.com"
 
 # 10+ nodes balanced, US/EU
-NEXT_PUBLIC_NODE_2 = "https://bsc-dataseed1.defibit.io"
+NEXT_PUBLIC_NODE_2 = "https://polygon-rpc.com"
 
 # 10+ nodes balanced in each region, global
-NEXT_PUBLIC_NODE_3 = "https://bsc-dataseed.binance.org"
+NEXT_PUBLIC_NODE_3 = "https://polygon-rpc.com"
 
 # Google Cloud Infrastructure Endpoint - Global
 NEXT_PUBLIC_NODE_PRODUCTION = ""
