--- a/.env.test
+++ b/.env.test
@@ -4,4 +4,4 @@ NEXT_PUBLIC_NODE_1 = "https://polygon-rpc.com"
 NEXT_PUBLIC_NODE_2 = "https://polygon-rpc.com"
 NEXT_PUBLIC_NODE_3 = "https://polygon-rpc.com"
 
-NEXT_PUBLIC_NODE_PRODUCTION = "https://nodes.pancakeswap.com"
+# NEXT_PUBLIC_NODE_PRODUCTION = "https://nodes.pancakeswap.com"
