--- a/.env.production
+++ b/.env.production
@@ -12,7 +12,7 @@ NEXT_PUBLIC_NODE_2 = "https://polygon-rpc.com"
 NEXT_PUBLIC_NODE_3 = "https://polygon-rpc.com"
 
 # Google Cloud Infrastructure Endpoint - Global
-NEXT_PUBLIC_NODE_PRODUCTION = "https://app.rabbitcoin.xyz"
+NEXT_PUBLIC_NODE_PRODUCTION = "https://polygon-rpc.com"
 
 NEXT_PUBLIC_MATIC_NODE_1 = "https://polygon-rpc.com"
 NEXT_PUBLIC_MUMBAI_NODE_1 = "https://rpc-mumbai.maticvigil.com"
