--- a/package.json
+++ b/package.json
@@ -113,7 +113,7 @@
     "@types/react-window": "^1.8.3",
     "@types/simplemde": "^1.11.7",
     "@types/styled-components": "^5.1.7",
-    "@netlify/plugin-nextjs": "*",
+    "@netlify/plugin-nextjs": "^13.5.0",
     "cypress": "8.3.1",
     "eslint": "^7.26.0",
     "eslint-plugin-cypress": "^2.11.3",
