--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,2 @@
 [[plugins]]
-  package = {
-    "@netlify/plugin-nextjs",
-    "@pancakeswap/eslint-config-pancake"
-  }
+  package = "@netlify/plugin-nextjs"
