--- a/.env.production
+++ b/.env.production
@@ -12,15 +12,15 @@ NEXT_PUBLIC_NODE_2 = "https://polygon-rpc.com"
 NEXT_PUBLIC_NODE_3 = "https://polygon-rpc.com"
 
 # Google Cloud Infrastructure Endpoint - Global
-NEXT_PUBLIC_NODE_PRODUCTION = "https://polygon-rpc.com"
+NEXT_PUBLIC_NODE_PRODUCTION = ""
 
 NEXT_PUBLIC_MATIC_NODE_1 = "https://polygon-rpc.com"
 NEXT_PUBLIC_MUMBAI_NODE_1 = "https://rpc-mumbai.maticvigil.com"
 
 NEXT_PUBLIC_GRAPH_API_PROFILE = "https://api.thegraph.com/subgraphs/name/rabbitcoinchef/profile"
-NEXT_PUBLIC_GRAPH_API_PREDICTION = "https://api.thegraph.com/subgraphs/name/pancakeswap/prediction-v2"
-NEXT_PUBLIC_GRAPH_API_LOTTERY = "https://api.thegraph.com/subgraphs/name/pancakeswap/lottery"
-NEXT_PUBLIC_GRAPH_API_NFT_MARKET = "https://api.thegraph.com/subgraphs/name/pancakeswap/nft-market"
+NEXT_PUBLIC_GRAPH_API_PREDICTION = "https://api.thegraph.com/subgraphs/name/rabbitcoinchef/prediction-v2"
+NEXT_PUBLIC_GRAPH_API_LOTTERY = "https://api.thegraph.com/subgraphs/name/rabbitcoinchef/lottery"
+NEXT_PUBLIC_GRAPH_API_NFT_MARKET = "https://api.thegraph.com/subgraphs/name/rabbitcoinchef/nft-market"
 
 NEXT_PUBLIC_SNAPSHOT_BASE_URL = "https://hub.snapshot.org"
 
