--- a/package.json
+++ b/package.json
@@ -60,14 +60,17 @@
     "ajv": "^6.12.3",
     "bignumber.js": "^9.0.0",
     "canvas-confetti": "^1.3.3",
+    "chart.js": "^4.4.0",
     "cids": "^1.0.0",
     "date-fns": "^2.21.3",
     "easymde": "^2.15.0",
     "fast-json-stable-stringify": "^2.1.0",
-    "graphql": "^15.5.0",
-    "graphql-request": "^3.4.0",
+    "graphql": "^16.8.1",
+    "graphql-request": "5.0.0",
     "js-cookie": "^3.0.1",
-    "lightweight-charts": "^3.5.0",
+    "lightweight-charts": "^4.0.1",
+    "local-storage": "^2.0.0",
+    "localforage": "^1.10.0",
     "lint-staged": "^12.3.4",
     "lodash": "^4.17.21",
     "moralis": "^1.3.5",
@@ -75,16 +78,17 @@
     "multihashes": "^3.0.1",
     "next": "^12.1.0",
     "numeral": "^2.0.6",
-    "react": "^17.0.1",
+    "react": "^18.2.0",
     "react-countup": "^4.3.3",
     "react-datepicker": "^4.2.1",
-    "react-dom": "^17.0.1",
+    "react-dom": "^18.2.0",
     "react-markdown": "^6.0.2",
     "react-moralis": "^1.3.2",
     "react-redux": "^7.2.4",
     "react-transition-group": "^4.4.1",
     "react-window": "^1.8.6",
     "recharts": "2.0.6",
+    "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
     "remark-gfm": "^1.0.0",
     "split-grid": "^1.0.11",
