--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pancake-frontend",
+  "name": "rabbitcoin-frontend",
   "version": "0.1.0",
   "private": true,
   "workspaces": [
@@ -60,9 +60,9 @@
     "ajv": "^6.12.3",
     "bignumber.js": "^9.0.0",
     "canvas-confetti": "^1.3.3",
-    "chart.js": "^4.4.0",
+    "chart.js": "^3.7.0",
     "cids": "^1.0.0",
-    "date-fns": "^2.21.3",
+    "date-fns": "^2.25.0",
     "easymde": "^2.15.0",
     "fast-json-stable-stringify": "^2.1.0",
     "graphql": "^16.8.1",
@@ -78,16 +78,16 @@
     "multihashes": "^3.0.1",
     "next": "^12.1.0",
     "numeral": "^2.0.6",
-    "react": "^18.2.0",
+    "react": "^18.0.0",
     "react-countup": "^4.3.3",
     "react-datepicker": "^4.2.1",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18.0.0",
     "react-markdown": "^6.0.2",
     "react-moralis": "^1.3.2",
     "react-redux": "^7.2.4",
     "react-transition-group": "^4.4.1",
     "react-window": "^1.8.6",
-    "recharts": "2.0.6",
+    "recharts": "^2.0.6",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
     "remark-gfm": "^1.0.0",
@@ -104,21 +104,20 @@
     "@testing-library/react-hooks": "^7.0.2",
     "@typechain/ethers-v5": "^8.0.5",
     "@types/canvas-confetti": "^1.4.2",
-    "@types/jest": "^26.0.23",
+    "@types/jest": "^27.0.0",
     "@types/js-cookie": "^3.0.1",
     "@types/lodash": "^4.14.178",
     "@types/multicodec": "^1.0.0",
-    "@types/node": "^13.13.5",
-    "@types/react": "^17.0.5",
-    "@types/react-datepicker": "^3.1.8",
-    "@types/react-dom": "^17.0.4",
+    "@types/node": "^16.0.0",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
     "@types/react-redux": "^7.1.16",
     "@types/react-transition-group": "^4.4.1",
     "@types/react-window": "^1.8.3",
     "@types/simplemde": "^1.11.7",
     "@types/styled-components": "^5.1.7",
     "cypress": "8.3.1",
-    "eslint": "^7.26.0",
+    "eslint": "^8.0.0",
     "eslint-plugin-cypress": "^2.11.3",
     "eslint-plugin-lodash": "^7.4.0",
     "husky": "^7.0.0",
@@ -128,12 +127,12 @@
     "serve": "^13.0.2",
     "source-map-explorer": "^2.5.2",
     "start-server-and-test": "^1.14.0",
-    "ts-node": "^9.1.1",
+    "ts-node": "^10.4.0",
     "turbo": "^1.1.4",
     "typechain": "^6.1.0"
   },
   "resolutions": {
-    "@types/react": "17.0.5",
-    "@types/react-dom": "17.0.5"
+    "@types/react": "18.0.0",
+    "@types/react-dom": "18.0.0"
   }
 }
