--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v2
         with:
-          node-version: 14.x
+          node-version: '18.x'
 
       - name: Get yarn cache directory path
         id: yarn-cache-dir-path
@@ -42,4 +42,4 @@ jobs:
         run: yarn install --frozen-lockfile
 
       - name: Run Prettier
-        run: yarn format:check
+        run: NEXT_PUBLIC_CHAIN_ID=137 yarn format:check
