--- a/.github/workflows/integrationTests.yml
+++ b/.github/workflows/integrationTests.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v2
         with:
-          node-version: 14.x
+          node-version: 18.x
 
       - name: Get yarn cache directory path
         id: yarn-cache-dir-path
@@ -32,8 +32,12 @@ jobs:
 
       - name: Cypress install
         run: yarn install --frozen-lockfile
+
       - run: yarn cypress install
+
       - run: yarn build
         env:
           NEXT_PUBLIC_SF_HEADER: ${{ secrets.SF_HEADER }}
+          NEXT_PUBLIC_CHAIN_ID: 137
+
       - run: yarn integration-test
