--- a/.github/workflows/lintPrTitle.yml
+++ b/.github/workflows/lintPrTitle.yml
@@ -12,6 +12,10 @@ jobs:
     name: Validate PR title
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/setup-node@v2
+        with:
+          node-version: 18.x
+
       - uses: amannn/action-semantic-pull-request@v4
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
